test/cli/test/preconditions/kyverno-test.yaml
name: test-preconditions
policies:
- policy.yaml
resources:
- resources.yaml
results:
- kind: Pod
  policy: preconditions
  resources:
  - test-valid
  result: pass
  rule: any-rule
- kind: Pod
  policy: preconditions
  resources:
  - test-invalid
  result: fail
  rule: any-rule
