test/cli/test/preconditions/policy.yaml
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: preconditions
spec:
  admission: true
  background: false
  rules:
  - match:
      any:
      - resources:
          kinds:
          - Pod
    name: any-rule
    preconditions:
      any:
      - key: '{{request.object.metadata.labels.app}}'
        operator: Equals
        value: busybox
    validate:
      message: Busybox must be used based on this label combination.
      pattern:
        spec:
          containers:
          - name: '*busybox*'
      failureAction: Enforce
