test/cli/test/preconditions/resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-valid
  labels:
    app: busybox
spec:
  containers:
  - image: busybox:1.28
    name: busybox
---
apiVersion: v1
kind: Pod
metadata:
  name: test-invalid
  labels:
    app: busybox
spec:
  containers:
  - name: nginx
    image: nginx:latest
