test/cli/test/preconditions/test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: PolicyTests
metadata:
 name: test-preconditions
spec:
 policies:
  - policy.yaml
 resources:
  - resources.yaml
 results:
  - policy: preconditions
    rule: any-rule
    resource: test-valid
    kind: Pod
    status: pass
  - policy: preconditions
    rule: any-rule
    resource: test-invalid
    kind: Pod
    status: fail
